Added version for metrics to track

--- a/src/main/resources/static/sms/format.css
+++ b/src/main/resources/static/sms/format.css
@@ -20,7 +20,7 @@ body {
 
 /* Main container to hold everything centered */
 .container {
-    background: white;
+    background: rgb(174, 172, 172);
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
